# github_ci_tutorial

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  run_docker.sh
.ci/: Dockerfile  build_and_run.sh
.github/workflows/: conditional_workflow.yaml  custom-workflow.yml  my_task.yaml
include/: utils.h
src/: main.cpp  utils.cpp
test/: CMakeLists.txt  test_demo.cpp
